# etfholdingextractor

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.agents/: agent_card.json  brief.md  journal.md  record.md  status.md  tasks.md
.agents/skills/holdings_category_sync/: SKILL.md
.agents/skills/weights_extraction/: SKILL.md
api/app/: main.py
docs/: architecture.md  library.md  reader.md
docs/adr/: 0001-layered-weights-extraction.md  0002-extension-into-providers-and-mainsequence-categories.md
src/etfh_extractor/: __init__.py  __main__.py  artifacts.py  exceptions.py  mainsequence_categories.py  models.py  reader.py  settings.py
src/etfh_extractor/cli/: __init__.py
src/etfh_extractor/providers/: __init__.py  base.py  browser.py  common.py  invesco.py  ishares.py  registry.py  state_street.py  vanguard.py
tests/: test_additional_providers.py  test_reader.py  test_registry.py
